<resources>
    <string name="app_name">MT Saver</string>
    <string name="app_description">Status Saver</string>

    // side navigation
    <string name="rate_app">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="privacy_description">Do you like to view the privacy policy for the MT Saver?</string>

    // bottom navigation
    <string name="title_status">Status</string>
    <string name="title_reel">Reels</string>
    <string name="title_saver">Saver</string>

    // app permission
    <string name="storage_permission">Storage Permission</string>
    <string name="storage_permission_description">To find status media files from your device, MT Saver requires \"Status storage\" permission</string>
    <string name="storage_path">To discover the status folder, go to Android -> media -> com.whatsapp -> WhatsApp -> Media -> and Open the .Status folder and click the \"Use this folder\" button.</string>
    <string name="storage_path_note">Note: If you don\'t see the .status folder, because it\'s hidden. Please activate the "show hidden files settings" option in the file settings.</string>
    <string name="wrong_storage_permission_description">You have been granted incorrect storage permission. Just \"Status storage\" permission is required for MT Saver.</string>
    <string name="grant_access">Grant Access</string>

    // reel fragment
    <string name="past_link_here">Paste reel link here</string>
    <string name="please_enter_link">Please enter the valid link</string>
    <string name="search">Search</string>
    <string name="paste">Paste</string>
    <string name="clear">Clear</string>
    <string name="download">Download</string>
    <string name="fetching_details">Fetching details!</string>

    // no internet
    <string name="no_internet">No internet !</string>
    <string name="need_internet">You must have an internet connection to download!</string>
    <string name="try_again">Try Again!</string>
    <string name="no_status">There is no status!</string>
    <string name="no_reels">There is no reels!</string>
</resources>