<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="10sp"
    android:paddingEnd="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_saver"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingTop="8sp"
            android:text="@string/storage_permission"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingTop="8sp"
        android:text="@string/storage_permission_description"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/grant_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingTop="8sp"
        android:text="@string/grant_access"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingTop="8sp"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>