<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:padding="10sp"
    tools:context=".ui.ReelFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/linkCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reelLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:hint="@string/past_link_here"
                android:importantForAutofill="no"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pasteLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30sp"
                    android:text="@string/paste"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/searchReel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loadingCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linkCard"
        android:layout_marginTop="20sp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ProgressBar
                android:id="@+id/loader"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/loadingMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30sp"
                android:layout_toEndOf="@+id/loader"
                android:text="@string/fetching_details"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/downloadCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linkCard"
        android:layout_marginTop="20sp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/reelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/downloadReelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reelTitle"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/downloadReel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/downloadReelLayout">

                <ImageView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/prevSlide"
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/menu_round_btn"
                    android:src="@drawable/ic_prev_nav"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/nextSlide"
                    android:layout_width="36sp"
                    android:layout_height="36sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/menu_round_btn"
                    android:src="@drawable/ic_next_nav"
                    android:visibility="gone" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>